1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m ([Map_c hdf5Out:deep]): Don't compute anything for call
	to -setRowNameLength: and don't call it.

	* List.m ([List_any -hdf5In:]): New method.
	
	* Array.[hm], collections.h ([Array_c -setCount:]): Return self.

	* Collection.m, Map.m ([... hdf5Out:deep:]): For dataset,
	set compoundType and count separately.

1999-01-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m ([... hdf5Out:deep:]): Set componentType
	from member prototype.

1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m, String.m (hdf5Out:deep:): 
	Use setClass: instead of setSourceClass: and setCompoundType:count:
	instead of setRecordType:count: (renames).
	Call writeRowNames:.

	* Map.m ([... hdf5Out:deep:]): Set typeName to Map member
	type, not Map. 

	* Collection.m, Map.m, String.m ([... hdf5Out:deep:]): Use
	getTypeName instead of name.  

	* Map.m ([Map_c -lispOut:deep:]): Likewise.

	* List.m ([List_any -lispOut:deep:]): Likewise.

	* StringObject.m ([String_c -lispOut:deep:]): Use getTypeName
	instead of literal String.

1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m ([... hdf5Out:deep:]): Set createFlag.
	
1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (String): Remove setLiteralFlag: and getLiteralFlag.

	* StringObject.[hm] ([String_c -getCount], [String_c -count], 
	[String_c -length]): Return unsigned.
	([String_c -lispIn:], [String_c -lispOut:deep:],
	[String_c -hdfIn:], [String_c -hdfOutOut:deep:): New methods.

	* StringObject.m: ([String_c -out:]): Remove.

	* List.[hm]: Make getCountPerBlock return unsigned.

	* InputStream.m: Include StringObject.h.

	* Map.m ([Map_c -hdf5Out:deep:]): Use storeAttributes:value: to
	save a compare function attribute.  Add support for non-object
	keys.
	
1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collection.h (compareCStrings): New function.